# swarmclause

./: .gitignore  README.md  database.sql  demo.sh  package-lock.json  package.json
agents/: README.md  agent-launcher.js  base-agent.js  package.json  ucp-protocol.js
agents/buyer/: buyer-agent.js
agents/mediator/: mediator-agent.js
agents/seller/: seller-agent.js
agents/simulator/: simulator-agent.js
backend/: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/services/: groq.py  hcs.py  hedera_contract.py  simulation.py
backend/app/swarmclause_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/contracts/: README.md  SwarmClauseEscrow.abi.json  SwarmClauseEscrow.sol  deployment.json
backend/tests/: conftest.py  test_simulation.py
docs/: SWARMCLAUSE_Deck.pptx  frontendprd.md  hedera-wallet.md  improvedPRD.md  prd.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: LoginForm.tsx  agent-dashboard.tsx
frontend/components/dashboard/: header.tsx  sidebar-context.tsx  sidebar.tsx
frontend/components/landing/: how-it-works.tsx  landing-footer.tsx  landing-hero.tsx  landing-nav.tsx  live-transcript.tsx  why-hedera.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: supabase.ts
scripts/: create-topic.js  deploy-contract.js
(+8 files in other folders)
